code cleanup and refactor for DecisionTreeBasedDomain